<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/numberLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_passcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="15"
        android:text="@string/enter_passcode"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password01"
            android:layout_width="10.0dip"
            android:layout_height="10.0dip"
            android:autofillHints=""
            android:background="@drawable/pin_step_off"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint=""
            android:inputType="textPassword"
            android:maxLength="1"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="15"
            android:textColor="@android:color/white"
            android:textSize="40.0sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password02"
            android:layout_width="10.0dip"
            android:layout_height="10.0dip"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:background="@drawable/pin_step_off"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint=""
            android:inputType="textPassword"
            android:maxLength="1"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="15"
            android:textColor="@android:color/white"
            android:textSize="40.0sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password03"
            android:layout_width="10.0dip"
            android:layout_height="10.0dip"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:background="@drawable/pin_step_off"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint=""
            android:inputType="textPassword"
            android:maxLength="1"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="15"
            android:textColor="@android:color/white"
            android:textSize="40.0sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/password04"
            android:layout_width="10.0dip"
            android:layout_height="10.0dip"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:background="@drawable/pin_step_off"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:hint=""
            android:inputType="textPassword"
            android:maxLength="1"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="15"
            android:textColor="@android:color/white"
            android:textSize="40.0sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/rl_keypad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/one"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/two"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/three"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/four"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_4"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/five"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/six"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_6"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seven"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_7"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/eight"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_8"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/nine"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_9"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/zero"
                    android:layout_width="65.0dip"
                    android:layout_height="65.0dip"
                    android:background="@drawable/code_btn"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:shadowColor="#000000"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="15"
                    android:text="@string/delete"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>

</LinearLayout>