<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="6.5"
    android:background="@drawable/setting_bg"
    tools:context="com.uniappscenter.pak_14august.lockscreen.zipper.bestzippers.info.OverlayPermissionActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center_horizontal"
        android:textSize="23sp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:ellipsize="end"
        android:textStyle="bold"
        android:layout_marginBottom="-30dp"
        android:text="@string/overlayTitle"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:padding="5dp"
        android:scaleType="centerInside"
        android:src="@drawable/perm1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:padding="7dp"
        android:textSize="15sp"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/georgia"
        android:textColor="@color/white"
        android:maxLines="5"
        android:ellipsize="end"
        android:text="@string/overlayDes"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStartedBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/tip_ripple_effect"
        android:gravity="center"
        android:fontFamily="@font/georgia"
        android:text="@string/allow"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</LinearLayout>